# scim-simulator

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
scim_sim/: cli.py  client.py  config.py  directory.py  groups.py  users.py
tests/: test_cli.py  test_client.py  test_config.py  test_directory.py  test_groups.py  test_users.py
