[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scim-sim"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "avinashmkamath@gmail.com" },
]
description = "A SCIM directory simulator and management tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "faker>=18.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
]

[project.urls]
"Homepage" = "https://github.com/Avinash-Kamath/scim-sim"

[project.scripts]
scim-sim = "scim_sim.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]